--- a/app/src/main/res/layout/activity_vistorias.xml
+++ b/app/src/main/res/layout/activity_vistorias.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.stone4.Vistorias">
+    tools:context="br.com.stone4.principal.Vistorias">
 
     <ImageView
         android:id="@+id/img_vistorias"
