--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,17 @@
         <item name="android:textColorHint">@color/white</item>
         <item name="android:textSize">18sp</item>
     </style>
+
+    // Tela_Controle_Resultado
+    <style name="Tela_Controle_Resultado">
+
+    </style>
+
+    // Tela_Controle_Resultado Bordas
+    <style name="Tela_Controle_Resultado_Bordas">
+        <item name="android:solidColor">#FFFFFF</item>
+        <item name="strokeWidth">3dp </item>
+        <item name="android:color">#B1BCBE</item>
+        <item name="cornerRadius">10dp</item>
+    </style>
 </resources>
