--- a/app/src/main/res/layout/activity_cert__previa.xml
+++ b/app/src/main/res/layout/activity_cert__previa.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.SESCIP_Vistorias"
-    tools:context="br.com.stone4.principal.Cert_Previa">
+    tools:context="br.com.stone4.principal.vistoria.Cert_Previa">
 
     <ScrollView
         android:layout_width="match_parent"
