--- a/app/src/main/res/layout/activity_cert_previa2.xml
+++ b/app/src/main/res/layout/activity_cert_previa2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.stone4.principal.cert_previa2">
+    tools:context="br.com.stone4.principal.vistoria.cert_previa2">
 
     <ScrollView
         android:layout_width="match_parent"
