--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="principal">
         <item name="android:layout_width">0dp</item>
@@ -30,7 +30,35 @@
         <item name="android:textColorHint">@color/white</item>
         <item name="android:textSize">18sp</item>
     </style>
+//--------------------------------------------------------------------------------------------------
+    Vistorias Passo-aPasso
+    // Título vistorias passo a passo
+    <style name="vist_passoApassoT">
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/teal_700</item>
+    </style>
 
+    // Observações vistorias passo a passo
+    <style name="vist_passoApassoObs">
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:textColor">@color/red_700</item>
+    </style>
+
+    // Textos vistorias passo a passo
+    <style name="vist_passoApassoTxt">
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:justificationMode" tools:ignore="NewApi">inter_word</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    //--------------------------------------------------------------------------------------------------
     // Tela_Controle_Resultado
     <style name="Tela_Controle_Resultado">
 
