--- a/app/src/main/res/layout/activity_vistorias.xml
+++ b/app/src/main/res/layout/activity_vistorias.xml
@@ -22,7 +22,7 @@
     <Button
         android:id="@+id/button_vistPassoApasso"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -39,7 +39,7 @@
     <Button
         android:id="@+id/button_vistoriador"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -74,7 +74,7 @@
     <Button
         android:id="@+id/button_passoapasso"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -91,7 +91,7 @@
     <Button
         android:id="@+id/button_consultaRapida"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
