--- a/app/src/main/res/layout/activity_consulta_rapida.xml
+++ b/app/src/main/res/layout/activity_consulta_rapida.xml
@@ -85,10 +85,31 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.github.barteksc.pdfviewer.PDFView
-            android:id="@+id/tv_arte_result"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_bizu_consulta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#9FA8DA"
+                android:gravity="center_horizontal"
+                android:text="Bizus"
+                android:textColor="#FFEB3B"
+                android:textColorHighlight="#FFEB3B"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/bizus_consulta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="5dp"
+                style="@style/bizus"
+                />
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
