--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,10 +58,24 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    // Activity Aarte Resultado - label de obrigatório ou recomendação
+    <style name="activity_arte_resultado_rec">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">10dp</item>
+        <item name="android:textStyle">italic</item>
+
+    </style>
     //--------------------------------------------------------------------------------------------------
     // Tela_Controle_Resultado
     <style name="Tela_Controle_Resultado">
-
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    // Tela Bizus
+    <style name="bizus">
+        <item name="android:textSize">24dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:justificationMode" tools:targetApi="o">inter_word</item>
     </style>
 
     // Tela_Controle_Resultado Bordas
