--- a/app/src/main/res/layout/activity_vistorias.xml
+++ b/app/src/main/res/layout/activity_vistorias.xml
@@ -1,109 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="br.com.stone4.principal.Vistorias">
 
-    <ImageView
-        android:id="@+id/img_vistorias"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/layoult_vistInteligente"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:alpha="0.5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_vistoriador"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logo" />
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_centerVertical="true"
+        android:background="#F44336"
+        android:onClick="onClic"
+        android:padding="10dp">
 
-    <Button
-        android:id="@+id/button_vistPassoApasso"
-        android:layout_width="0dp"
+        <ImageView
+            android:id="@+id/img_vistorias"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/exigencias" />
+
+        <LinearLayout
+            android:id="@+id/lay_vistIntTxt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="onClic"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_vistTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/button_VistoriaInteligente_Title"
+                android:textAlignment="center"
+                android:textColorHint="#F8F7F7"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_vistSub"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/button_VistoriaInteligente_Sub"
+                android:textAlignment="center"
+                android:textColorHint="#FFEB3B" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoult_consulta"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/button_vistPassoApasso"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@android:color/holo_red_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_below="@id/layoult_vistInteligente"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_centerVertical="true"
+        android:background="@color/teal_700"
+        android:onClick="onClic"
+        android:padding="10dp">
 
-    <Button
-        android:id="@+id/button_vistoriador"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/button_Vistoriador"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@android:color/holo_red_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_vistPassoApasso" />
+        <ImageView
+            android:id="@+id/img_consulta"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/consulta" />
 
-    <Button
-        android:id="@+id/button_certPrevia"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/button_certPrevia"
-        android:textColorHint="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@android:color/holo_red_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_consultaRapida" />
+        <LinearLayout
+            android:id="@+id/lay_consultaTxt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="onClic"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_passoapasso"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/button_passoaPasso"
-        android:textColorHint="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@android:color/holo_red_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_certPrevia" />
+            <TextView
+                android:id="@+id/tv_consultaTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/button_ConsultaRapida"
+                android:textAlignment="center"
+                android:textColorHint="#FFFFFD"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button_consultaRapida"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/button_ConsultaRapida"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@android:color/holo_red_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_vistoriador" />
+            <TextView
+                android:id="@+id/tv_consultaSub"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/button_ConsultaRapidaSub"
+                android:textAlignment="center"
+                android:textColorHint="#FFEB3B" />
+        </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+
+</RelativeLayout>
