--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_700">#FFD50000</color>
+    <color name="gray">#E1DEDE</color>
+    <color name="black_text">#272626</color>
 </resources>
