--- a/app/src/main/res/layout/arte_resultado.xml
+++ b/app/src/main/res/layout/arte_resultado.xml
@@ -14,8 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="75dp"
